Fix: User profile scrollbar thumb not displaying

--- a/src/components/ui/_scrollbar.scss
+++ b/src/components/ui/_scrollbar.scss
@@ -60,6 +60,9 @@
 #user-profile-modal .scroller::-webkit-scrollbar-track-piece{
     visibility: visible;
 }
+#user-profile-modal .scroller::-webkit-scrollbar-thumb{
+    visibility: visible;
+}
 // Search results pane
 .theme-dark .search-results-wrap .scroller-wrap .scroller::-webkit-scrollbar-thumb{
     background-color: #454545 !important;
